...
        android:id="@+id/ivThumbnial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_weight="35"/>
    <TextView
        android:id="@+id/tvStepDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment"
        style="@style/pragraph_style"
        android:layout_margin="@dimen/margin_medium"
        android:layout_weight="50" />
...
