...
            android:text="@string/steps_label"
            android:textColor="@color/white" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rvSteps"
            android:background="@drawable/rectangular_stroke_white"
            android:padding="@dimen/margin_medium" />


    </LinearLayout>
</ScrollView>
